--- a/3dModel-yours.html
+++ b/3dModel-yours.html
@@ -11,7 +11,7 @@
       <a-sky color="lightblue"></a-sky>
       
       <a-entity 
-      ply-model="src:"
+      ply-model="src:castle.ply"
       position="0 0 -2"
       rotation="0 0 0"
       ></a-entity>
